--- a/library.properties
+++ b/library.properties
@@ -8,3 +8,4 @@ paragraph=This library is a wrapper for WiFi and MQTT that serves to make it eas
 url=https://github.com/anwarminarso/ESPWiFiMqttWrapper
 architectures=esp8266,esp32
 depends=ArduinoJSON, PubSubClient
+includes=ESPWiFiMqttWrapper.h
