--- a/library.properties
+++ b/library.properties
@@ -1,4 +1,4 @@
-name=ESPWiFiMqttWrapper
+name=WiFiMqttWrapper
 version=1.0.1
 author=Anwar Minarso
 category=Communication
@@ -7,5 +7,5 @@ sentence=ESP8266 & ESP32 - WiFi and MQTT Wrapper
 paragraph=This library is a wrapper for WiFi and MQTT that serves to make it easier to use.
 url=https://github.com/anwarminarso/ESPWiFiMqttWrapper
 architectures=esp8266,esp32
-depends=ArduinoJSON, PubSubClient
+depends=ArduinoJson, PubSubClient
 includes=ESPWiFiMqttWrapper.h
