--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
 name=WiFiMqttWrapper
-version=1.0.1
+version=1.0.2
 author=Anwar Minarso
 category=Communication
 maintainer=Anwar Minarso <anwar.minarso@gmail.com>
-sentence=ESP8266 & ESP32 - WiFi and MQTT Wrapper
+sentence=ESP8266 and ESP32 WiFi - MQTT Wrapper
 paragraph=This library is a wrapper for WiFi and MQTT that serves to make it easier to use.
 url=https://github.com/anwarminarso/ESPWiFiMqttWrapper
 architectures=esp8266,esp32
