--- a/library.properties
+++ b/library.properties
@@ -1,4 +1,4 @@
-name=WiFiMqttWrapper
+name=ESPWiFiMqttWrapper
 version=1.0.3
 author=Anwar Minarso
 category=Communication
@@ -7,5 +7,5 @@ sentence=ESP8266 and ESP32 WiFi - MQTT Wrapper
 paragraph=This library is a wrapper for WiFi and MQTT that serves to make it easier to use.
 url=https://github.com/anwarminarso/ESPWiFiMqttWrapper
 architectures=esp8266,esp32
-depends=Arduinojson (>=7.0.0), PubSubClient (>=2.7.0)
+depends=ArduinoJSON (>=7.0.0), PubSubClient (>=2.7.0)
 includes=ESPWiFiMqttWrapper.h
