--- a/library.properties
+++ b/library.properties
@@ -1,5 +1,5 @@
 name=ESPWiFiMqttWrapper
-version=1.0.3
+version=1.0.4
 author=Anwar Minarso
 category=Communication
 maintainer=Anwar Minarso <anwar.minarso@gmail.com>
@@ -7,5 +7,5 @@ sentence=ESP8266 and ESP32 WiFi - MQTT Wrapper
 paragraph=This library is a wrapper for WiFi and MQTT that serves to make it easier to use.
 url=https://github.com/anwarminarso/ESPWiFiMqttWrapper
 architectures=esp8266,esp32
-depends=PubSubClient,ArduinoJson
-includes=ESPWiFiMqttWrapper.h
+depends=PubSubClient
+
